mm-k8s/mm-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mm-svc
  namespace: mm
spec:
  selector:
    app: mm
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 6000
